syntax = "proto3";

package broprox;
option java_package = "no.nb.nna.broprox.api";
//option java_multiple_files = true;
option java_outer_classname = "DnsServiceProto";

// Service for resolving, caching and logging dns requests.
service DnsService {
    rpc resolve (ResolveRequest) returns (ResolveReply) {}
}

message ResolveRequest {
    string host = 1;
    int32 port = 2;
}

message ResolveReply {
    string host = 1;
    int32 port = 2;
    string textual_ip = 3;
    bytes raw_ip = 4;
}
